testsuite/tests/parser/should_fail/T14588.hs
module T14588 where

main = print (let !x = 1 + 2 in x)
