testsuite/tests/parser/should_fail/T14588.stderr

T14588.hs:3:19: error:
    Illegal bang-pattern (use BangPatterns):
    !x
